<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/home_bottom_nav"
        android:enabled="true"
        android:title="@string/home_bottom_nav"
        android:icon="@drawable/ic_home_white_24dp"
        app:showAsAction ="ifRoom"
        />

    <item
        android:id="@+id/events_bottom_nav"
        android:enabled="true"
        android:title="@string/calendar_bottom_nav"
        android:icon="@drawable/ic_date_range_white_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/feed_bottom_nav"
        android:enabled="true"
        android:title="@string/feed_bottom_nav"
        android:icon="@drawable/ic_timeline_white_24px"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/explore_bottom_nav"
        android:enabled="true"
        android:title="@string/explore_bottom_nav"
        android:icon="@drawable/ic_explore_white_24dp"
        app:showAsAction="ifRoom"/>
</menu>