<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             style="@style/AppTheme">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/abc_text_size_display_4_material"
        android:layout_gravity="top|center_horizontal"
        android:layout_margin="25dp"
        tools:ignore="PrivateResource"
        android:background="@color/cardview_light_background">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:columnCount="5"
            android:rowCount="4"
            android:background="@color/cardview_light_background"
            android:layout_alignParentBottom="true"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/backToMain"
                android:layout_row="0"
                android:layout_column="0"
                android:src="@drawable/abc_ic_ab_back_material"
                android:padding="13dp"
                android:layout_gravity="fill_horizontal|top"
                android:background="@color/cardview_light_background"
                android:contentDescription="@string/back_button_desc"
                android:clickable="true"
                android:cropToPadding="false"/>

            <EditText
                android:layout_height="wrap_content"
                android:id="@+id/county_zipInput"
                android:layout_row="0"
                android:layout_column="1"
                android:padding="10dp"
                android:textSize="20sp"
                android:textStyle="normal"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_county_zip"
                android:layout_gravity="fill_horizontal|bottom"
                android:maxLines="1"
                android:layout_columnSpan="2"
                android:layout_width="wrap_content"
                android:layout_columnWeight="2"
                tools:ignore="UnusedAttribute"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/speechToText"
                android:layout_row="0"
                android:layout_column="3"
                android:src="@android:drawable/ic_btn_speak_now"
                android:padding="10dp"
                android:layout_gravity="end"
                android:background="@color/cardview_light_background"
                android:contentDescription="@string/speech_button_desc"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/use_current_location"
                android:id="@+id/textView"
                android:layout_row="1"
                android:layout_column="2"
                android:padding="10dp"
                android:typeface="normal"
                android:textStyle="italic"
                android:layout_marginTop="5dp"
                android:layout_gravity="fill_horizontal"
                android:background="@color/cardview_light_background"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/getLocation"
                android:layout_row="1"
                android:layout_column="0"
                android:src="@android:drawable/ic_menu_mylocation"
                android:layout_gravity="fill_horizontal|start|center_horizontal"
                android:padding="10dp"
                android:clickable="true"
                android:background="@color/cardview_light_background"
                android:contentDescription="@string/location_button_desc"/>
        </GridLayout>
    </RelativeLayout>

    <ImageView
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:id="@+id/appLogo"
        android:src="@android:drawable/sym_def_app_icon"
        android:layout_gravity="end|bottom"
        android:contentDescription="@string/app_name"
        android:clickable="true"/>
</FrameLayout>