<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    app:cardCornerRadius="3dp"
                                    android:background="@color/md_white_1000"
                                    app:cardBackgroundColor="@color/md_white_1000"
                                    app:cardUseCompatPadding="true"
                                    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/politicianCard"
        android:background="@color/md_white_1000"
        android:clickable="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/politicianImage"
            android:background="@color/md_white_1000"
            android:contentDescription="@string/politician_image"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/politicianImage">

            <TextView
                android:text="@string/default_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/smallDescription"
                android:textSize="16sp"
                android:paddingTop="3dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:paddingBottom="2dp"
                android:layout_gravity="center_vertical"
                android:background="@color/md_white_1000"
                android:layout_alignTop="@+id/politicianImage"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/politicianImage"
                android:layout_toEndOf="@+id/politicianImage"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:text="@string/politician_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/politicianPosition"
                android:paddingLeft="2dp"
                android:background="@color/md_white_1000"
                android:paddingRight="2dp"
                android:layout_gravity="center|center_horizontal"
                android:textSize="12sp"
                android:layout_alignBottom="@+id/politicianImage"
                android:layout_toEndOf="@+id/politicianImage"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>