<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_politician"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wordpress.kaitribble.unnamedvotingapplication.tallythevote.wordpress.kaitribble.unnamedvotingapplication.PoliticianActivity"
    >

    <TextView
        android:text="@string/default_event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/politicianName"
        android:layout_below="@+id/politicianImage"
        android:layout_centerHorizontal="true"
        android:background="@color/md_white_1000"
        android:textSize="36sp"
        android:padding="10dp"/>

    <TextView
        android:text="@string/sample_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/politicianDescription"
        android:background="@color/md_white_1000"
        android:layout_below="@+id/politicianName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:padding="15dp"
        />

    <ImageView
        android:layout_width="200dp"
        app:srcCompat="@mipmap/ic_smaligo__c"
        android:id="@+id/politicianImage"
        android:layout_gravity="center|center_horizontal"
        android:layout_height="200dp"
        android:background="@color/md_white_1000"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView5"/>

    <TextView
        android:text="@string/politician_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/md_white_1000"
        android:id="@+id/politicianPositionText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:padding="10dp"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_phone_black_24dp"
        android:id="@+id/callButton"
        android:layout_below="@+id/politicianImage"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/politicianDescription"
        android:layout_toStartOf="@+id/politicianName"
        android:background="@color/cardview_light_background"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_email_black_24dp"
        android:layout_below="@+id/politicianImage"
        android:id="@+id/emailButton"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/politicianDescription"
        android:layout_toEndOf="@+id/politicianName"
        android:background="@color/cardview_light_background"/>
</RelativeLayout>
